<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent" xmlns:tools="http://schemas.android.com/tools"
            android:background="@drawable/grad_green">
    <LinearLayout
            android:id="@+id/ll_first"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_trees_data"
            android:textAlignment="center"
            android:textColor="@color/whiteColor"
            android:textSize="25sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:textStyle="bold"
            android:fontFamily="casual"
            />
        <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_leaf"
                android:layout_gravity="center_horizontal"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:theme="@style/MyColors"
            >
        <EditText
            android:id="@+id/et_treeNumbers"
            android:hint="@string/tree_s_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="18sp"
            android:textColor="@color/whiteColor"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:theme="@style/MyColors">
        <EditText
                android:id="@+id/et_treeNames"
                android:hint="@string/tree_s_names"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="18sp"
                android:textColor="@color/whiteColor"/>
    </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:theme="@style/MyColors">
            <EditText
                    android:id="@+id/et_treeHeight"
                    android:hint="@string/tree_s_height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textSize="18sp"
                    android:textColor="@color/whiteColor"/>
        </android.support.design.widget.TextInputLayout>
      <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:theme="@style/MyColors">
            <EditText
                    android:id="@+id/et_treeDiameter"
                    android:hint="@string/tree_s_diameter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textSize="18sp"
                    android:textColor="@color/whiteColor"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:theme="@style/MyColors">
            <EditText
                    android:id="@+id/et_treeLocation"
                    android:hint="@string/tree_s_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/whiteColor"
                    />
        </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:theme="@style/MyColors">
                <EditText
                        android:id="@+id/et_treeOwner"
                        android:hint="@string/tree_owner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textColor="@color/whiteColor"
                        />
            </android.support.design.widget.TextInputLayout>
        <TextView
                android:id="@+id/tv_addimage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_image"
                android:layout_margin="10dp"
                android:textColor="@color/whiteColor"
                android:textSize="18sp"
                android:drawableEnd="@drawable/ic_add"
                android:drawablePadding="10dp"
                />
        <ImageView
                android:id="@+id/img_addimage"
                android:layout_width="150dp"
                android:layout_height="150dp"
                tools:src="@drawable/ic_tree"
                android:scaleType="centerCrop"
                android:layout_gravity="center_horizontal"
                android:visibility="gone"
                />
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tree_s_injection"
                android:layout_margin="10dp"
                android:textSize="18sp"
                android:textColor="@color/whiteColor"
                />
        <Spinner
                android:id="@+id/spintreeInjection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/whiteColor"
                tools:entries="@array/list_data"
                android:popupBackground="@color/clorophil"
        />
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:theme="@style/MyColors">
            <EditText
                    android:id="@+id/et_treeInjector"
                    android:hint="@string/tree_s_injector"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="18sp"
                    android:textColor="@color/whiteColor"/>
        </android.support.design.widget.TextInputLayout>
         <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:text="@string/submit"
            android:background="@drawable/curved_shape"
            android:textColor="@color/whiteColor"
            android:id="@+id/btn_submit"
        />

        <ImageView
                android:id="@+id/img_add_qr"
                android:layout_width="150dp"
                android:layout_height="150dp"
                tools:src="@drawable/ic_tree"
                android:scaleType="centerCrop"
                android:layout_gravity="center_horizontal"
                android:visibility="gone"
                />
</LinearLayout>
</ScrollView>
