<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:background="@drawable/grad_green">
    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/login"
              android:textSize="30sp"
              android:textColor="#fff"
              android:textAlignment="center"
              android:layout_marginTop="20dp"
              android:layout_marginBottom="20dp"/>
    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_leaf"/>
    <android.support.design.widget.TextInputLayout
            android:id="@+id/ti_layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:theme="@style/MyColors">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_email"
                android:hint="@string/username"
                android:layout_margin="10dp"
                android:textColor="#ffff"
                android:inputType="textEmailAddress"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:id="@+id/ti_layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:passwordToggleTint="#ffff"
            app:passwordToggleEnabled="true"
            android:theme="@style/MyColors">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_pass"
                android:hint="@string/password"
                android:layout_margin="10dp"
                android:textColor="#ffff"
                android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>
    <Button
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:id="@+id/btn_login"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/curved_shape"
            android:text="@string/login"
            android:textColor="@color/whiteColor"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donothave"
            android:textColor="@color/whiteColor"
            android:textSize="18sp"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_register"
            android:layout_marginStart="5dp"
            android:text="@string/register_here"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#47d1ff"/>
    </LinearLayout>
</LinearLayout>