<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:background="@drawable/grad_green">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:textSize="30sp"
            android:textColor="@color/whiteColor"
            android:textAlignment="center"
            android:layout_margin="10dp"/>
    <android.support.design.widget.TextInputLayout
            android:id="@+id/ti_layout0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:theme="@style/MyColors">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_name"
                android:hint="@string/name"
                android:layout_margin="10dp"
                android:textColor="#ffff"
                android:inputType="text"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:id="@+id/ti_layoutz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:theme="@style/MyColors">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_uname"
                android:hint="@string/username"
                android:layout_margin="10dp"
                android:textColor="#ffff"
                android:inputType="text"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:id="@+id/ti_layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:theme="@style/MyColors">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_email"
                android:hint="@string/email"
                android:layout_margin="10dp"
                android:textColor="#ffff"
                android:inputType="textEmailAddress"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:id="@+id/ti_layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:passwordToggleTint="#ffff"
            app:passwordToggleEnabled="true"
            android:theme="@style/MyColors">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_pass"
                android:hint="@string/password"
                android:layout_margin="10dp"
                android:textColor="#ffff"
                android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:id="@+id/ti_layout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:passwordToggleTint="#ffff"
            app:passwordToggleEnabled="true"
            android:theme="@style/MyColors">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_passConfirm"
                android:hint="@string/confirm_password"
                android:layout_margin="10dp"
                android:textColor="#ffff"
                android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>
    <Button
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:id="@+id/btn_regis"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/curved_shape"
            android:text="@string/registration"
            android:textColor="@color/whiteColor"/>
</LinearLayout>