<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_margin="10dp"
        android:id="@+id/cv_trees">
    <LinearLayout
        android:background="@color/clorophil"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <ImageView
            android:id="@+id/img_data"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:scaleType="centerCrop"
            tools:src="@drawable/ic_tree"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">
            <TextView
                    android:id="@+id/tvTreesName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tree_s_names"
                    android:textSize="16sp"
                    android:textColor="@color/whiteColor"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp"/>
            <TextView
                    android:id="@+id/tvTreesNumbers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tree_s_number"
                    android:textSize="16sp"
                    android:textColor="@color/whiteColor"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp"/>
            <TextView
                    android:id="@+id/tvTreesHigh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tree_s_height"
                    android:textSize="16sp"
                    android:textColor="@color/whiteColor"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp"/>
            <TextView
                    android:id="@+id/tvTreesDiameter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tree_s_diameter"
                    android:textSize="16sp"
                    android:textColor="@color/whiteColor"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp"/>

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>