<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@drawable/grad_green">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".activities.DetailTrees">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/colorPrimaryDark"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                    android:id="@+id/backOk"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/ic_left_arrow"/>
            <TextView
                    android:id="@+id/tvTreesName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/tree_s_names"
                    android:textSize="25sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="40dp"
                    android:textStyle="bold"
                    android:textColor="@color/whiteColor"/>
        </LinearLayout>
        <ImageView
                android:id="@+id/img_detailImage"
                android:background="@color/colorPrimaryDark"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                tools:src="@drawable/ic_qrcodescan"
                android:scaleType="fitCenter"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"/>
        <TextView
                android:id="@+id/tvTreesNumbers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/tree_s_number"
                android:textSize="20sp"
                android:layout_marginStart="15dp"
                android:textColor="@color/whiteColor"
                android:layout_marginBottom="10dp"/>
        <TextView
                android:id="@+id/tvTreesDiameter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/tree_s_diameter"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="15dp"
                android:textColor="@color/whiteColor"/>
        <TextView
                android:id="@+id/tvTreesHigh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                tools:text="@string/tree_s_height"
                android:textSize="20sp"
                android:layout_marginStart="15dp"
                android:textColor="@color/whiteColor"/>
        <TextView
                android:id="@+id/tvisInjection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="isAlready injection ?"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                android:layout_marginStart="15dp"
                android:textColor="@color/whiteColor"/>
        <TextView
                android:id="@+id/tvLocation"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Location"
                android:textSize="20sp"
                android:layout_marginStart="15dp"
                android:textColor="@color/whiteColor"/>
        <TextView
                android:id="@+id/tvInjector"
                android:layout_width="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content"
                tools:text="Who is inject this trees?"
                android:textSize="20sp"
                android:layout_marginStart="15dp"
                android:textColor="@color/whiteColor"/>
        <TextView
                android:id="@+id/tvOwner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                tools:text="owner of the trees"
                android:textSize="20sp"
                android:layout_marginStart="15dp"
                android:textColor="@color/whiteColor"/>
        <ImageView
                android:id="@+id/imgForQR"
                android:layout_margin="15dp"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                tools:src="@drawable/ic_qrcodescan"
                android:visibility="gone"
                />
        <Button
                android:id="@+id/btnSeePdf"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:background="@drawable/curved_shape"
                android:text="@string/see_in_pdf"
                android:textColor="@color/whiteColor"
                android:layout_margin="10dp"
                android:layout_gravity="center"/>
    </LinearLayout>

</ScrollView>
