<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.MainActivity"
        android:orientation="vertical"
        android:background="@drawable/grad_green">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="vertical"
            android:layout_marginBottom="50dp">
        <ImageView
                android:id="@+id/logout"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_logout"
                android:layout_margin="20dp"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:text="@string/menu"
        android:textAlignment="center"
        android:textColor="@color/greenseed"
        android:layout_marginBottom="50dp"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginEnd="20dp">
            <ImageView
                    android:id="@+id/hello"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_leaf"
                    android:layout_margin="10dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_all_trees_data"
                    android:textColor="@color/greenseed"
                    android:textSize="20sp"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginStart="20dp">
            <ImageView
                    android:id="@+id/scan_bar"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/ic_qrcodescan"
            />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scan_tree_s_qr"
                    android:textColor="@color/greenseed"
                    android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>